# hydro

./: .buildinfo  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  325020190403_hy1_odv.nc  CHANGELOG  CHANGELOG.md  CITATION.cff  LICENSE.md  MANIFEST.in  ODF_CCHDO_netCDF_ops.html  README.md  _erddap_table.html  attributes.html  cchdo_cf_netcdf_example.ipynb  cchdo_option1.nc  changelog.html  erddap.html  exchange_checker.html  format_spec.html  genindex.html  getting_started.html  index.html  notebooks.html  objects.inv  odv_nc_modify.ipynb  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  with_argonames.nc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-docs.yml  do-release.yml  python-app.yml  python-selftest.yml
_modules/: index.html
_modules/hydro/: __main__.html  __main_helpers.html  accessors.html  checks.html  conformance.html  consts.html  core.html  dt.html  exchange.html  flags.html  migration.html  rename.html  sorting.html  tutorial.html  types.html  utils.html
_modules/hydro/exchange/: exceptions.html  flags.html  helpers.html
_modules/hydro/legacy/: coards.html  woce.html
_modules/hydro/tests/: conftest.html  test_accessors.html  test_checks.html  test_core_ops.html  test_csv.html  test_exchange.html  test_legacy.html  test_merge.html  test_rename.html
_sources/: ODF_CCHDO_netCDF_ops.rst.txt  exchange_checker.md.txt  format_spec.rst.txt  index.rst.txt  notebooks.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/hydro/: index.rst.txt
_sources/autoapi/hydro/__main__/: index.rst.txt
_sources/autoapi/hydro/__main_helpers/: index.rst.txt
_sources/autoapi/hydro/accessors/: index.rst.txt
_sources/autoapi/hydro/checks/: index.rst.txt
_sources/autoapi/hydro/conformance/: index.rst.txt
_sources/autoapi/hydro/consts/: index.rst.txt
_sources/autoapi/hydro/convert/: index.rst.txt
_sources/autoapi/hydro/core/: index.rst.txt
_sources/autoapi/hydro/dt/: index.rst.txt
_sources/autoapi/hydro/exchange/: index.rst.txt
_sources/autoapi/hydro/flags/: index.rst.txt
_sources/autoapi/hydro/legacy/: index.rst.txt
_sources/autoapi/hydro/migration/: index.rst.txt
_sources/autoapi/hydro/rename/: index.rst.txt
_sources/autoapi/hydro/sorting/: index.rst.txt
_sources/autoapi/hydro/tests/: index.rst.txt
_sources/autoapi/hydro/tutorial/: index.rst.txt
_sources/autoapi/hydro/types/: index.rst.txt
_sources/autoapi/hydro/utils/: index.rst.txt
_static/: convert_exchange.py
autoapi/: index.html
autoapi/hydro/: index.html
autoapi/hydro/__main__/: index.html
autoapi/hydro/__main_helpers/: index.html
autoapi/hydro/accessors/: index.html
autoapi/hydro/checks/: index.html
autoapi/hydro/conformance/: index.html
autoapi/hydro/consts/: index.html
autoapi/hydro/convert/: index.html
autoapi/hydro/core/: index.html
autoapi/hydro/dt/: index.html
autoapi/hydro/exchange/: index.html
autoapi/hydro/exchange/exceptions/: index.html
autoapi/hydro/exchange/flags/: index.html
autoapi/hydro/exchange/helpers/: index.html
autoapi/hydro/flags/: index.html
autoapi/hydro/legacy/: index.html
autoapi/hydro/legacy/coards/: index.html
autoapi/hydro/legacy/woce/: index.html
autoapi/hydro/migration/: index.html
autoapi/hydro/rename/: index.html
autoapi/hydro/sorting/: index.html
autoapi/hydro/tests/: index.html
autoapi/hydro/tests/conftest/: index.html
autoapi/hydro/tests/data/: index.html
autoapi/hydro/tests/test_accessors/: index.html
autoapi/hydro/tests/test_checks/: index.html
autoapi/hydro/tests/test_core_ops/: index.html
autoapi/hydro/tests/test_csv/: index.html
autoapi/hydro/tests/test_exchange/: index.html
autoapi/hydro/tests/test_legacy/: index.html
autoapi/hydro/tests/test_merge/: index.html
autoapi/hydro/tests/test_rename/: index.html
autoapi/hydro/tutorial/: index.html
autoapi/hydro/types/: index.html
autoapi/hydro/utils/: index.html
cchdo/hydro/: __init__.py  __main__.py  __main_helpers.py  accessors.py  checks.py  conformance.py  convert.py  core.py  migration.py  rename.py  tutorial.py
cchdo/hydro/exchange/: __init__.py  containers.py  exceptions.py  flags.py  helpers.py  io.py  merge.py  two_pass.py
cchdo/hydro/legacy/coards/: __init__.py  name_netcdf.csv  netcdf.py  netcdf_bottle.py  netcdf_bottle_zip.py  netcdf_ctd.py  netcdf_ctd_zip.py  zip_netcdf.py
cchdo/hydro/legacy/woce/: __init__.py  woce.py  woce_bottle.py  woce_ctd.py  woce_ctd_zip.py
cchdo/hydro/tests/: conftest.py  test_accessors.py  test_checks.py  test_core_ops.py  test_csv.py  test_exchange.py  test_legacy.py  test_merge.py  test_rename.py
docs/: Makefile  _erddap_table.py  _erddap_table.rst  _exchange_checker_include.html  _variables.py  api.rst  attributes.rst  changelog.md  conf.py  erddap.md  erddap.rst  exchange_checker.md  exchange_checker.rst  format_spec.md  format_spec.rst  fq_json.md  index.rst
docs/_static/: convert_exchange.py  derrived_makers.py  exchange_chcker.html
docs/examples/: merge_fq_example.ipynb  p02.csv  round_trip.ipynb  simple.ipynb  test.nc
docs/examples/2018_s04p_ctd/: .gitignore
examples/: round_trip.html  round_trip.ipynb  simple.html  simple.ipynb  testing.ipynb
examples/2018_s04p_ctd/: add_remove_param_s04p_merge.html  add_remove_param_s04p_merge.ipynb
hydro/: __init__.py  _version.py  accessors.py  conformance.py  convert.py  core.py  exceptions.py  exchange.py  flag.py  rename.py  tutorial.py
hydro/data/: __init__.py  aliases.json  argo-parameters-list-code-and-b.csv  parameters.json
hydro/exchange/: __init__.py  containers.py  exceptions.py  flags.py  io.py  merge.py  test_no_TIME_hy1.csv
hydro/tests/: test_data.py  test_exchange.py  test_rename.py
metadata_test/: diagram.md  metademo.ipynb
src/cchdo/hydro/: __init__.py  __main__.py  __main_helpers.py  accessors.py  checks.py  consts.py  core.py  discoverability.py  dt.py  flags.py  metadata.py  rename.py  sorting.py  tutorial.py  types.py  utils.py
src/cchdo/hydro/tests/: conftest.py  (+7 more)
(+28 files in other folders)
