[build-system]
requires = ["setuptools>=68", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"

[project]
name = "cchdo.hydro"
authors = [{name = "cchdo", email = "cchdo@ucsd.edu"}]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dynamic = ["version"]
license = {text = "BSD 3-clause"}
dependencies = [
    "cchdo.params>=2024.3",
    "xarray>=2023.9.0",
    "requests>=2.26.0",
    "numpy",
    "pandas>=1.3.3",
    "appdirs",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
"cchdo.hydro" = "cchdo.hydro.__main__:cli"

[project.urls]
Homepage = "https://cchdo.ucsd.edu/"
Documentation = "https://hydro.readthedocs.io/en/latest/"
Repository = "https://github.com/cchdo/hydro.git"

[project.optional-dependencies]
netcdf = [
    "netCDF4>=1.5.7",
]
schema = [
    "gsw",
]
selftest = [
    "cchdo.hydro[netcdf]",
    "pytest",
    "requests-mock",
]
cli = [
    "cchdo.hydro[netcdf]",
    "cchdo.auth",
    "click",
    "rich",
]
complete = [
    "cchdo.hydro[cli,schema,selftest]"
]

[dependency-groups]
dev = [
    "cchdo.hydro[complete]",
    "codecov>=2.1.13",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.12.0",
    "types-requests>=2.32.0.20241016",
]
docs = [
    "furo>=2024.8.6",
    "jupyter>=1.1.1",
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.1",
    "sphinx-autoapi>=3.6.0",
    "sphinx-design>=0.6.1",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "appdirs.*",
    "pandas",
    "scipy.*",
    "netCDF4.*",
    "cftime.*",
    "cchdo.auth.*",
    "gsw.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
    "E402", # module level import not at top of file
    "E731", # do not assign a lambda expression, use a def
]
extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "ISC",  # flake8-implicit-str-concat
  "PIE",  # flake8-pie
  "TID",  # flake8-tidy-imports (absolute imports)
  "PYI",  # flake8-pyi
  "FLY",  # flynt
  "I",    # isort
  "PERF", # Perflint
  "W",    # pycodestyle warnings
  "PGH",  # pygrep-hooks
  "PLE",  # Pylint Errors
  "UP",   # pyupgrade
  "FURB", # refurb
  "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["cchdo"]

[tool.uv]
default-groups = ["dev", "docs"]