[flake8]
max-line-length = 88
ignore = 
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
    # Walrus Operator :=
    E701
    E231
exclude = 
    docs
    versioneer.py

[metadata]
name = cchdo.hydro
author = CCHDO
author-email = cchdo@ucsd.edu
home-page = https://github.com/cchdo/hydro
license = BSD 3-clause
long_description = file: README.md, LICENSE.md

[options]
python_requires = ~=3.8
zip_safe = False
packages = find_namespace:
namespace_packages=
  cchdo
setup_requires = setuptools_scm
include_package_data=True
install_requires = 
    cchdo.params >= 0.1.9
    xarray >= 0.14.0
    requests >= 2.22.0
    netCDF4 >= 1.5.2
    numpy >= 1.18.0
    pandas >= 1.0.3
    appdirs

[options.extras_require]
dev = 
    pytest==6.2.1
    pytest-cov==2.10.1
    pre-commit==2.9.3
    black==20.8b1
    codecov==2.1.10
    requests-mock==1.8.0
    mypy==0.800
    flake8==3.8.4
    pyflakes==2.2.0
docs = 
    Sphinx==3.3.1
    jupyter>=1.0.0
    furo
complete = 
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true

[mypy]

[mypy-pytest.*]
ignore_missing_imports = True

# TODO make numpy supported
[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-appdirs.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-rich.*]
ignore_missing_imports = True

# setuptools is not typed
[mypy-setup]
ignore_errors = True
#ignore the docs
[mypy-docs.conf]
ignore_errors = True