[flake8]
max-line-length = 88
ignore = 
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
    # Walrus Operator :=
    E701
    E231
exclude = 
    docs
    versioneer.py

[metadata]
name = cchdo.hydro
author = CCHDO
author-email = cchdo@ucsd.edu
home-page = https://github.com/cchdo/hydro
license = BSD 3-clause
long_description = file: README.md, LICENSE.md

[options]
python_requires = ~=3.8
zip_safe = False
packages = find_namespace:
namespace_packages=
  cchdo
setup_requires = setuptools_scm
include_package_data=True
install_requires = 
    cchdo.params >= 0.1.18
    xarray >= 0.18.0
    requests >= 2.26.0
    netCDF4 >= 1.5.7
    numpy >= 1.20.0
    pandas >= 1.3.3
    appdirs
    typing_extensions

[options.extras_require]
selftest = 
    pytest==6.2.5
    requests-mock==1.8.0
dev = 
    %(selftest)s
    pytest-cov
    pre-commit
    black==22.6.0
    codecov
    mypy==0.971
    flake8==5.0.4
    #typing info
    types-requests
docs = 
    Sphinx
    jupyter
    furo
cli = 
    click
    rich
complete = 
    %(cli)s
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true
