[metadata]
name = cchdo.hydro
author = CCHDO
author_email = cchdo@ucsd.edu
home_page = https://github.com/cchdo/hydro
license = BSD 3-clause
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown

[options]
python_requires = ~=3.10
zip_safe = False
packages = find_namespace:
namespace_packages=
  cchdo
setup_requires = setuptools_scm
include_package_data=True
install_requires = 
    cchdo.params >= 2023.9
    xarray >= 0.18.0
    requests >= 2.26.0
    numpy >= 1.20.0
    pandas >= 1.3.3
    appdirs

[options.extras_require]
netcdf = 
    netCDF4 >= 1.5.7
matlab = 
    scipy
selftest = 
    pytest==6.2.5
    requests-mock==1.8.0
dev = 
    %(selftest)s
    pytest-cov
    pre-commit
    black==23.7.0
    codecov
    mypy==1.5.1
    ruff==0.0.285
    #typing info
    types-requests
docs = 
    Sphinx
    jupyter
    furo==2023.08.17
    sphinx-design
    sphinx-autoapi
cli = 
    %(netcdf)s
    click
    rich
complete = 
    %(netcdf)s
    %(matlab)s
    %(cli)s
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true

